[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemies/piranha/Piranha.gd" type="Script" id=1]
[ext_resource path="res://graphics/piranha.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 5 )

[sub_resource type="Animation" id=2]
resource_name = "to_left"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Piranha" type="Area2D"]
z_index = 6
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="DirectionAnim" type="AnimationPlayer" parent="."]
anims/to_left = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Piranha_area_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
